compiler/tests/pass/const_while/main.afns
package test;

extern "C" fn puts(s: cstr) -> i32;

fn main() -> i32 {
    const limit: i32 = 2;
    let i: i32 = 0;

    while i < limit {
        i += 1;
    }

    if i == 2 {
        puts("ok");
    }

    return 0;
}
