compiler/tests/fail/dup_function/main.afns
package dupfn;

fn foo() -> i32 { return 1; }
fn foo() -> i32 { return 2; }

fn main() -> i32 { return foo(); }
